// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Linux Updater Test > test arch download and install (pacman) 1`] = `
{
  "linux": [
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.pacman",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp.pacman",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test debian download and install (apt) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.deb",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.deb",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test debian download and install (dpkg) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.deb",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.deb",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test fedora download and install (dnf) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test fedora download and install (rpm) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test fedora download and install (yum) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`Linux Updater Test > test fedora download and install (zypper) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.0.1",
      },
    },
  ],
}
`;
